--- a/index.html
+++ b/index.html
@@ -1762,20 +1762,20 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Mar/">März 2020 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Feb/">Februar 2020 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">November 2019 | 2-day</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Mar/">März 2020 | 1/2 Tag</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Feb/">Februar 2020 | 1/2 Tag</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">November 2019 | 1/2 Tag</a><br>
 
                 <br><br><br>
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit R</p>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/BaselRBootcamp_2018July">July 2018 | 4-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/BaselRBootcamp_2018April/schedule">April 2018 | 4-day</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/BaselRBootcamp_2018July">July 2018 | 4 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/BaselRBootcamp_2018April/schedule">April 2018 | 4 Tage</a><br>
 
                 <br><br><br>
 
@@ -1783,7 +1783,7 @@
                 <h4  style="padding:0px;margin:0px">Statistics with R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
 
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2-day</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2 Tage</a><br>
 
                 <br><br><br>
 
@@ -1791,9 +1791,10 @@
                 <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Lerne mit R prädiktive Algorithmen zu erstellen</p>
 
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">October 2019 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2-day</a><br>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2-day</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2020Apr/">April 2020 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">October 2019 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2 Tage</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2 Tage</a><br>
 
                 <br><br>
 
