--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     var ml_text = "DE | Okt 23/24 | Voranmelden";
     var ml_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden."
     var ml_font = "lighter";
-    var rep_text = "DE | Jun 5/6 | Anmelden";
+    var rep_text = "DE | Jun 5/6 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var rep_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-283873#collapsible-heading-anmeldung"
     var rep_font = "bolder";
 
