--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     var rep_font = "bolder";
 
     // running link
-    var run_link = "https://therbootcamp.github.io/ML_2020Apr/"
-    var run_style = '' // margin-bottom:0px;
-    var run_style2 = 'none' // ''
+    var run_link = "https://therbootcamp.github.io/SmR_2020Mai/"
+    var run_style = 'margin-bottom:0px;' // margin-bottom:0px; // ''
+    var run_style2 = '' // '' // 'none'
   </script>
 
   <!-- Google Tag Manager -->
