--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     // running link
     var run_link = "https://therbootcamp.github.io/SmR_2020Mai/"
-    var run_style = 'margin-bottom:0px;' // margin-bottom:0px; // ''
-    var run_style2 = '' // '' // 'none'
+    var run_style = '' // margin-bottom:0px; // ''
+    var run_style2 = 'none' // '' // 'none'
   </script>
 
   <!-- Google Tag Manager -->
@@ -1782,7 +1782,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">Statistics with R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
-
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2019Mai/">Mai 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2 Tage</a><br>
 
                 <br><br><br>
