--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     var expl_text = "DE | Sep 4/5 | Voranmelden";
     var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden."
     var expl_font = "lighter";
-    var stat_text = "DE | Mai 8/9 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung"
-    var stat_font = "bolder";
+    var stat_text = "DE | Sep 25/26 | Voranmelden";
+    var stat_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden."
+    var stat_font = "lighter";
     var ml_text = "DE | Okt 23/24 | Voranmelden";
     var ml_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden."
     var ml_font = "lighter";
