--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     var rep_font = "bolder";
 
     // running link
-    var run_link = "https://therbootcamp.github.io/SmR_2020Mai/"
-    var run_style = '' // margin-bottom:0px; // ''
-    var run_style2 = 'none' // '' // 'none'
+    var run_link = "https://therbootcamp.github.io/RmR_2020Jun/"
+    var run_style = 'margin-bottom:0px;' // margin-bottom:0px; // ''
+    var run_style2 = '' // '' // 'none'
   </script>
 
   <!-- Google Tag Manager -->
