--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     var ml_text = "DE | Okt 23/24 | Anmelden";
     var ml_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung"
     var ml_font = "bolder";
-    var rep_text = "DE | Jun 5/6 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var rep_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-283873#collapsible-heading-anmeldung"
-    var rep_font = "bolder";
+    var rep_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var rep_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Reporting mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Reporting mit R' voranmelden."
+    var rep_font = "lighter";
 
     // running link
     var run_link = "https://therbootcamp.github.io/RmR_2020Jun/"
-    var run_style = 'margin-bottom:0px;' // margin-bottom:0px; // ''
-    var run_style2 = '' // '' // 'none'
+    var run_style = '' // margin-bottom:0px; // ''
+    var run_style2 = 'none' // '' // 'none'
   </script>
 
   <!-- Google Tag Manager -->
@@ -1344,7 +1344,7 @@
                 <br><br>
 
                 <p class="head">Beschreibung</p>
-                <p class="text-muted entry">Eine der wichtigsten Aufgaben bei datengestützten Projekten ist die Kommunikation der Ergebnisse. Dabei kann es sich um Berichte, Präsentationen, oder interaktive Dashboards handeln. Die Programmiersprache R und R Studio gehören für diese Zwecke zu den besten verfügbaren Tools. In diesem intensiven Zweitageskurs lernen Sie, wie Sie mit Hilfe von RMarkdown dynamische Berichte und Folien ganz einfach in unterschiedlichen Formaten wie .pdf, .docx oder .pptx erstellen und gestalten können. Dabei lernen Sie Analysen, Visualisierungen und Text in einem einzigen, beliebig reproduzierbaren Dokument zu erstellen. Ausserdem lernen Sie interaktive Dashboards mit Shiny erstellen können, damit Sie Daten und Abbildungen einfach explorieren und zur Exploration zur Verfügung stellen können.</p>
+                <p class="text-muted entry">Eine der wichtigsten Aufgaben bei datengestützten Projekten ist die Kommunikation der Ergebnisse. Dabei kann es sich um Berichte, Präsentationen, oder interaktive Dashboards handeln. Die Programmiersprache R und R Studio gehören für diese Zwecke zu den besten verfügbaren Tools. In diesem intensiven Zweitageskurs lernen Sie, wie Sie mit Hilfe von RMarkdown dynamische Berichte und Folien ganz einfach in unterschiedlichen Formaten wie .html, .pdf, .docx oder .pptx erstellen und gestalten können. Dabei lernen Sie Analysen, Visualisierungen und Text in einem einzigen, beliebig reproduzierbaren Dokument zu erstellen. Ausserdem lernen Sie interaktive Dashboards mit Shiny erstellen können, damit Sie Daten und Abbildungen einfach explorieren und zur Exploration zur Verfügung stellen können.</p>
 
                 <p class="head">Voraussetzungen</p>
                 <p class="text-muted entry">Teilnehmende dieses Kurses sollten über Grundkenntnisse in der Programmiersprache R verfügen. Für Interessierte ohne oder mit unzureichender Erfahrung in R empfehlen wir die Kurse Einführung in die moderne Datenanalyse mit R,  oder Explorative Datenanalyse mit R zu besuchen. Wenn Sie nicht sicher sind, ob Sie über genügend Grundkenntnisse verfügen setzen Sie sich entweder direkt mit uns in Verbindung oder nehmen Sie zunächst am diesem <a href="http://bit.ly/weissichgenug%C3%BCberR"><b>QUIZ</b></a> (bitly.com/weissichgenugüberR) teil. Teilnehmende sind gebeten, einen eigenen Laptop mit Software-Installationsrechten mitzubringen. </p>
@@ -1387,12 +1387,12 @@
                   <tr>
                     <td class="time">0900</td>
                     <td><a href="">Willkommen</a></td>
-                    <td><a href="">Rückblick</a></td>
+                    <td><a href="">Wiederholung</a></td>
                   </tr>
                   <tr>
                     <td class="time">0930</td>
-                    <td><a href="">Dynamisches Reporting</a></td>
-                    <td><a href="">Markdown zu Office Dateien</a></td>
+                    <td><a href="">Dynamische Berichte mit Markdown I</a></td>
+                    <td><a href="">Folien mit Markdown</a></td>
                   </tr>
                   <tr>
                     <td class="time">1200</td>
@@ -1401,12 +1401,12 @@
                   </tr>
                   <tr>
                     <td class="time">1300</td>
-                    <td><a href="">Reports mit Markdown I</a></td>
+                    <td><a href="">Dynamische Berichte mit Markdown II</a></td>
                     <td><a href="">Dashboards mit Shiny</a></td>
                   </tr>
                   <tr>
                     <td class="time">1530</td>
-                    <td><a href="">Reports mit Markdown II</a></a></td>
+                    <td><a href="">Styling dynamischer Berichte</a></a></td>
                     <td><a href="">Dashboards mit Shiny II</a></td>
                   </tr>
                   <tr>
@@ -1770,7 +1770,7 @@
                 <br><br><br>
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
-                <h4  style="padding:0px;margin:0px">Explorative Datenanalyse</h4>
+                <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit R</p>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2 Tage</a><br>
@@ -1781,7 +1781,7 @@
                 <br><br><br>
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
-                <h4  style="padding:0px;margin:0px">Statistics with R</h4>
+                <h4  style="padding:0px;margin:0px">Statistik mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2020Mai/">Mai 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2 Tage</a><br>
@@ -1789,13 +1789,21 @@
                 <br><br><br>
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
-                <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
+                <h4  style="padding:0px;margin:0px">Maschinelles Lernen mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Lerne mit R prädiktive Algorithmen zu erstellen</p>
 
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2020Apr/">April 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">October 2019 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2 Tage</a><br>
+
+                <br><br><br>
+
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
+                <h4  style="padding:0px;margin:0px">Reporting mit R</h4>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Lernen Sie dynamische, interaktive Berichte mit R zu erstellen.</p>
+
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/RmR_2020Jun/">Juni 2020 | 2 Tage</a><br>
 
                 <br><br>
 
