--- a/ml.html
+++ b/ml.html
@@ -227,16 +227,16 @@
         <div class="col-lg-12 text-center">
           <h1 class="title text-uppercase" style="color:white" align="left">Maschinelles Lernen mit R</h1>
           <div class="row">
-          <div class="col-md-1 text-center bullet">
+          <div class="col-sm-1 text-center bullet">
               <img src="../img/sticker2.png">
           </div>
-          <div class="col-md-11 text-center">
+          <div class="col-sm-11 text-center">
             <h1 class="usp">ML ermöglicht bahnbrechende Entwicklungen in Wirtschafts und Forschung.</h1>
           </div>
-          <div class="col-md-1 text-center bullet">
+          <div class="col-sm-1 text-center bullet">
               <img src="../img/sticker2.png">
           </div>
-          <div class="col-md-11 text-center">
+          <div class="col-sm-11 text-center">
             <h1 class="usp">Lerne in 2 Tagen was Du wissen musst um mit R ML auf Deine Daten anzuwenden.</h1>
           </div>
           </div>
@@ -252,66 +252,67 @@
   <section class="page-section bg-light" id="services">
     <div class="container">
       <div class="row">
-        <div class="col-md-2">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-users fa-stack-1x fa-inverse"></i>
-          </span>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-sm-5" align="right">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-users fa-stack-1x fa-inverse"></i>
+              </span>
+            </div>
+            <div class="col-sm-7">
+              <h4 class="icon"><b>Kleine Gruppen</b><br> bis maximal 14 Teilnehmer</h4>
+            </div>
+            <div class="col-sm-5" align="right">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-money-bill-alt fa-stack-1x fa-inverse"></i>
+              </span>
+            </div>
+            <div class="col-sm-7">
+              <h4 class="icon"><b>990 CHF</b></h4>
+            </div>
+            <div class="col-sm-5" align="right">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-hand-holding-heart fa-stack-1x fa-inverse"></i>
+              </span>
+            </div>
+            <div class="col-sm-7">
+              <h4 class="icon"><b>1-zu-1 Betreuung</b><br>durch erfahrene Dozenten</h4>
+            </div>
+          </div>
         </div>
-        <div class="col-md-3">
-          <h4 class="icon"><b>Kleine Gruppen</b><br> bis maximal 14 Teilnehmer</h4>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-money-bill-alt fa-stack-1x fa-inverse"></i>
-          </span>
-        </div>
-        <div class="col-md-3">
-          <h4 class="icon"><b>990 CHF</b></h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-hand-holding-heart fa-stack-1x fa-inverse"></i>
-          </span>
-        </div>
-        <div class="col-md-3">
-          <h4 class="icon"><b>1-zu-1 Betreuung</b><br>durch erfahrene Dozenten</h4>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-calendar-alt fa-stack-1x fa-inverse"></i>
-          </span>
-        </div>
-        <div class="col-md-3">
-          <h4 class="icon"><b>2-Tage</b><br>von 9 bis 18Uhr</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-headset fa-stack-1x fa-inverse"></i>
-            </span>
-        </div>
-        <div class="col-md-3">
-          <h4 class="icon"><b>Webinar</b><br>Online-Kurs über Zoom</h4>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-registered fa-stack-1x fa-inverse"></i>
-            </span>
-        </div>
-        <div class="col-md-3">
-          <h4 class="icon"><b>R Grundlagen</b> vorausgesetzt. <a data-toggle="modal" href="#experience"><b>&rarr;erfahre mehr</b></a></h4>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-sm-5" align="right">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-calendar-alt fa-stack-1x fa-inverse"></i>
+              </span>
+            </div>
+            <div class="col-sm-7">
+              <h4 class="icon"><b>2-Tage</b><br>von 9 bis 18Uhr</h4>
+            </div>
+            <div class="col-sm-5" align="right">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-headset fa-stack-1x fa-inverse"></i>
+              </span>
+            </div>
+            <div class="col-sm-7">
+              <h4 class="icon"><b>Webinar</b><br>Online-Kurs über Zoom</h4>
+            </div>
+            <div class="col-sm-5" align="right">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-registered fa-stack-1x fa-inverse"></i>
+              </span>
+            </div>
+            <div class="col-sm-7">
+              <h4 class="icon"><b>R Grundlagen</b><br>vorausgesetzt.<br><a data-toggle="modal" href="#experience">&rarr;Details</a></h4>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -547,7 +548,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Melden Dich an!</h2>
+          <h2 class="section-heading text-uppercase">Melde Dich an!</h2>
           <br><br>
         </div>
       </div>
@@ -594,51 +595,6 @@
   </section>
 
 
-
-  <!-- Contact
-  <section class="page-section" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2><br><br>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
 
   <!-- Footer -->
   <footer class="footer">
@@ -716,29 +672,9 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
+              <div class="modal-body" style="height:1800px">
                 <!-- Project Details Go Here -->
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/R.png" alt="">
-                <h2 class="text-uppercase">Weiss ich genug über R?</h2>
-                <p class="item-intro text-muted">Mit diesem Quiz können Sie herausfinden, ob Sie über die nötigen R Grundlagen verfügen. Sie sollten mindestens 7 Punkte erreichen. Wenn Sie nicht genügend Punkte erreicht haben, Unklarheiten bestehen, oder auf der Suche nach Materialien für die weitere Vorbereitung sind, schreiben sie uns einfach unter therbootcamp@gmail.com.</p>
-
-                <p class="head">1. R was designed for analytics</p>
-                <p class="text-muted entry">R was designed first and foremost as a language for analytics and statistics. For that reason, R makes it easy for you to run statistical analyses, may it be an A/B test or a complex machine learning algorithm, with minimal code. Thanks to modern packages such as <a class="pckg" target="_blank" href="http://cran.r-project.org/package=dbplyr">dbplyr</a> and <a class="pckg" target="_blank" href="http://cran.r-project.org/package=RHadoop">RHadoop</a>, R also enables you to use virtually the same code when analysing Gigabytes of data stored on databases as you would on a data from a small Excel spreadsheet. </p>
-
-                <p class="head">2. R has an unrivaled set of free packages</p>
-                <p class="text-muted entry">As great as R’s core framework is, the language would not be nearly as popular as it is today if it weren’t for R’s unrivaled collection of (freely available!) packages. What is an R package? An R package is a collection of code designed to help you, the programmer, solve a particular task without having to program a solution yourself. It really is difficult to overstate comprehensiveness of the R package universe.</p>
-
-                <p class="head">3. R enables you to make striking visualisations</p>
-                <p class="text-muted entry">As good as R is for statistics, it is as good, if not better, for data visualisation. Why? One word: <a class="pckg" target="_blank" href="http://cran.r-project.org/package=ggplot2">ggplot2</a>. The <a class="pckg" target="_blank" href="http://cran.r-project.org/package=ggplot2">ggplot2</a> package makes it easy for anyone to create colorful, complex, striking visualisations with minimal code. For example, you can create the plot below with essentially only 5 lines of code.</p>
-
-                <img src="img/portfolio/whyr/ggplot.png" style="max-width:400px"></img>
-
-                <p class="head">4. R works great with other languages</p>
-                <p class="text-muted entry">There are cases where you may want to take advantage of the features of other languages, such as C++ for its blinding speed or SQL for querying relational databases. Thankfully, with packages such as <a class="pckg" target="_blank" href="http://cran.r-project.org/package=Rcpp">Rcpp</a> for C++ or <a class="pckg" target="_blank" href="http://cran.r-project.org/package=dbplyr">dbplyr</a> for SQL combined with the amazing RStudio integrated developer environment, you can easily supplement your R code with these and other languages.</p>
-
-                <p class="head">5. R has a passionate, open community</p>
-                <p class="text-muted entry">Without question, one of the best things about R is its community of passionate users, developers and bloggers who will jump at the chance to show you all of the amazing things they are doing with R. With hundreds of bloggers sharing their code at <a href="www.r-bloggers.com">r-bloggers.com</a> or local meetup groups such as <a href="https://rladies.org/">R-Ladies</a> or Michael's <a href="https://www.meetup.com/Bern-R/">Bern R Meetup</a>, the opportunities to meet with and learn from other R users are really endless.</p>
-
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc-VnLOLxNdiRniw3mnXjtBy1LdYr1I-kLDo_ZHOsTybjm09g/viewform?embedded=true" width="700" height="520" " frameborder="0" marginheight="0" marginwidth="0"></iframe>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close</button>
