--- a/ml.html
+++ b/ml.html
@@ -215,8 +215,8 @@
 
 
   <!-- Services -->
-  <section class="page-section" id="services" style="padding: 200px 100px 40px 100px;background-image:url(../img/header_narrow.jpg);background-size:cover">
-    <div class="container">
+  <header class="masthead">
+    <div class="container" style="padding-top:200px">
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="row" align="left" style=";height:68px;margin-bottom:20px">
@@ -246,7 +246,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </header>
 
   <!-- Services -->
   <section class="page-section bg-light" id="services">
