--- a/ml.html
+++ b/ml.html
@@ -92,7 +92,7 @@
     font-weight: 100;
   }
 
-  @media (max-width: 576px) {
+  @media (min-width: 0px) {
     .concepts li{font-size: 16px;}
     #myCarousel {height: 620px}
     .course-title {font-size:40px}
