--- a/ml.html
+++ b/ml.html
@@ -98,7 +98,7 @@
     .course-title {font-size:40px}
     .usp {font-size:20px}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
-    .unibas-tag {width:160px;height:60px;padding:2px 6px 6px 20px}
+    .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
     .bullet {width:32px;height:32px}
   }
@@ -109,7 +109,7 @@
     .course-title {font-size:60px}
     .usp {font-size:20px}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
-    .unibas-tag {width:160px;height:60px;padding:2px 6px 6px 20px}
+    .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
     .bullet {width:32px;height:32px}
   }
@@ -120,7 +120,7 @@
     .course-title {font-size:80px}
     .usp {font-size:24px}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
-    .unibas-tag {width:160px;height:60px;padding:2px 6px 6px 12px}
+    .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
     .bullet {width:32px;height:32px}
   }
@@ -134,7 +134,7 @@
     .course-title {font-size:100px}
     .usp {font-size:28px}
     .webinar-tag {width:200px;height:80px;padding:20px}
-    .unibas-tag {width:240px;height:100px;padding:2px 6px 6px 20px}
+    .unibas-tag {width:240px;height:100px;padding:6px 0px}
     .webinar-tag h1 {font-size:2.2em}
     .bullet {width:48px;height:48px}
   }
@@ -148,7 +148,7 @@
     .course-title {font-size:140px}
     .usp {font-size:40px}
     .webinar-tag {width:200px;height:80px;padding:20px}
-    .unibas-tag {width:240px;height:100px;padding:2px 6px 6px 20px}
+    .unibas-tag {width:240px;height:100px;padding:6px 0px}
     .webinar-tag h1 {font-size:2.2em}
     .bullet {width:48px;height:48px}
   }
@@ -254,13 +254,35 @@
   <!-- Services -->
   <header class="masthead">
     <div class="container" style="padding-top:200px">
-      <div class="unibas-tag"><img src="../img/unibas_invert.png" style="max-width:100%;max-height:100%"></img></div>
-      <div class="webinar-tag"><h1>Webinar</h1></div>
-      <h1 class="course-title text-uppercase" style="color:white" align="left">Maschinelles Lernen mit R</h1>
-      <img class="bullet" src="../img/sticker2.png">
-      <h1 class="usp">ML ermöglicht bahnbrechende Entwicklungen in Wirtschafts und Forschung.</h1>
-      <img class="bullet" src="../img/sticker2.png">
-      <h1 class="usp">Lerne in 2 Tagen was Du wissen musst um mit R ML auf Deine Daten anzuwenden.</h1>
+      <div class="row">
+        <div class="col-lg-12" align="left">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="unibas-tag"><img src="../img/unibas_invert.png" style="max-width:100%;max-height:100%"></img></div>
+              <div class="webinar-tag"><h1>Webinar</h1></div>
+            </div>
+            <div class="col-sm-12">
+              <h1 class="course-title text-uppercase" style="color:white">Maschinelles Lernen mit R</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12" align="left">
+          <div class="row">
+            <div class="col-sm-1">
+              <img class="bullet" src="../img/sticker2.png">
+            </div>
+            <div class="col-sm-11">
+              <h1 class="usp">ML ermöglicht bahnbrechende Entwicklungen in Wirtschafts und Forschung.</h1>
+            </div>
+            <div class="col-sm-1">
+              <img class="bullet" src="../img/sticker2.png">
+            </div>
+            <div class="col-sm-11">
+              <h1 class="usp">Lerne in 2 Tagen was Du wissen musst um mit R ML auf Deine Daten anzuwenden.</h1>
+            </div>
+          </div>
+        </div>
+      </div>
       <br><br><br>
       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Anmelden</a>
       <br><br><br>
