--- a/ml.html
+++ b/ml.html
@@ -95,8 +95,8 @@
   @media (min-width: 0px) {
     .concepts li{font-size: 16px;}
     #myCarousel {height: 620px}
-    .course-title {font-size:40px}
-    .usp {font-size:20px}
+    .course-title {font-size:40px;padding:4% 0%}
+    .usp {font-size:16px}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
     .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
@@ -106,8 +106,8 @@
   @media (min-width: 576px) {
     .concepts li{font-size: 16px;}
     #myCarousel {height: 620px}
-    .course-title {font-size:60px}
-    .usp {font-size:20px}
+    .course-title {font-size:60px;padding:4% 0%}
+    .usp {font-size:16px}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
     .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
@@ -117,7 +117,7 @@
   @media (min-width: 768px) {
     .concepts li{font-size: 12px;}
     #myCarousel {height: 400px}
-    .course-title {font-size:80px}
+    .course-title {font-size:80px;padding:4% 0%}
     .usp {font-size:24px}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
     .unibas-tag {width:160px;height:60px;padding:6px 0px}
@@ -131,7 +131,7 @@
       padding: 4px 0px;
       }
     #myCarousel {height: 500px}
-    .course-title {font-size:100px}
+    .course-title {font-size:100px;padding:4% 0%}
     .usp {font-size:28px}
     .webinar-tag {width:200px;height:80px;padding:20px}
     .unibas-tag {width:240px;height:100px;padding:6px 0px}
@@ -145,7 +145,7 @@
       padding: 10px 0px;
       }
     #myCarousel {height: 580px}
-    .course-title {font-size:140px}
+    .course-title {font-size:140px;padding:4% 0%}
     .usp {font-size:40px}
     .webinar-tag {width:200px;height:80px;padding:20px}
     .unibas-tag {width:240px;height:100px;padding:6px 0px}
@@ -253,7 +253,7 @@
 
   <!-- Services -->
   <header class="masthead">
-    <div class="container" style="padding-top:200px">
+    <div class="container" style="padding-top:15%">
       <div class="row">
         <div class="col-lg-12" align="left">
           <div class="row">
@@ -283,9 +283,9 @@
           </div>
         </div>
       </div>
-      <br><br><br>
+      <div style="padding:10%">
       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Anmelden</a>
-      <br><br><br>
+      </div>
     </div>
   </header>
 
