--- a/ml.html
+++ b/ml.html
@@ -65,6 +65,7 @@
     text-align: left;
     font-weight:100;
     padding-bottom: 10px;
+    overflow-wrap: normal;
   }
 
   .bullet img {}
@@ -266,18 +267,20 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-12" align="left">
-          <div class="row">
-            <div class="col-sm-1">
+        <div class="col-sm-12" align="left">
+          <div class="row flex-nowrap">
+            <div class="col-1">
               <img class="bullet" src="../img/sticker2.png">
             </div>
-            <div class="col-sm-11">
+            <div class="col-11">
               <h1 class="usp">ML ermöglicht bahnbrechende Entwicklungen in Wirtschafts und Forschung.</h1>
             </div>
-            <div class="col-sm-1">
+          </div>
+          <div class="row flex-nowrap">
+            <div class="col-1">
               <img class="bullet" src="../img/sticker2.png">
             </div>
-            <div class="col-sm-11">
+            <div class="col-11" align="left">
               <h1 class="usp">Lerne in 2 Tagen was Du wissen musst um mit R ML auf Deine Daten anzuwenden.</h1>
             </div>
           </div>
