--- a/ml.html
+++ b/ml.html
@@ -58,6 +58,7 @@
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     font-weight:500;
+    font-size: 1rem;
   }
 
   .usp {
@@ -97,7 +98,7 @@
     .concepts li{font-size: 16px;}
     #myCarousel {height: 620px}
     .course-title {font-size:40px;padding:4% 0%}
-    .usp {font-size:16px}
+    .usp {font-size:1rem;}
     .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
     .unibas-tag {width:160px;height:60px;padding:6px 0px}
     .webinar-tag h1 {font-size:1.6em}
@@ -109,10 +110,6 @@
     #myCarousel {height: 620px}
     .course-title {font-size:60px;padding:4% 0%}
     .usp {font-size:16px}
-    .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
-    .unibas-tag {width:160px;height:60px;padding:6px 0px}
-    .webinar-tag h1 {font-size:1.6em}
-    .bullet {width:32px;height:32px}
   }
 
   @media (min-width: 768px) {
@@ -120,10 +117,6 @@
     #myCarousel {height: 400px}
     .course-title {font-size:80px;padding:4% 0%}
     .usp {font-size:24px}
-    .webinar-tag {width:140px;height:52px;padding:11px 8px 8px 12px}
-    .unibas-tag {width:160px;height:60px;padding:6px 0px}
-    .webinar-tag h1 {font-size:1.6em}
-    .bullet {width:32px;height:32px}
   }
 
   @media (min-width: 992px) {
@@ -133,12 +126,20 @@
       }
     #myCarousel {height: 500px}
     .course-title {font-size:100px;padding:4% 0%}
-    .usp {font-size:28px}
+    .usp {font-size:2rem;}
     .webinar-tag {width:200px;height:80px;padding:20px}
     .unibas-tag {width:240px;height:100px;padding:6px 0px}
     .webinar-tag h1 {font-size:2.2em}
     .bullet {width:48px;height:48px}
+    .fa-stack {
+      font-size: 4em;
+    }
+    .icon {
+      font-size: 2rem;
+    }
   }
+
+
 
   @media (min-width: 1200px) {
     .concepts li{
@@ -148,10 +149,6 @@
     #myCarousel {height: 580px}
     .course-title {font-size:140px;padding:4% 0%}
     .usp {font-size:40px}
-    .webinar-tag {width:200px;height:80px;padding:20px}
-    .unibas-tag {width:240px;height:100px;padding:6px 0px}
-    .webinar-tag h1 {font-size:2.2em}
-    .bullet {width:48px;height:48px}
   }
 
 
@@ -293,67 +290,75 @@
   </header>
 
   <!-- Services -->
-  <section class="page-section bg-light" id="services">
+  <section class="page-section bg-light" id="facts">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <div class="row">
-            <div class="col-sm-5" align="right">
-              <span class="fa-stack fa-4x">
+        <div class="col-md-6">
+          <div class="row flex-nowrap">
+            <div class="col-5" align="right">
+              <span class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-users fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-sm-7">
+            <div class="col-7">
               <h4 class="icon"><b>Kleine Gruppen</b><br> bis maximal 14 Teilnehmer</h4>
             </div>
-            <div class="col-sm-5" align="right">
-              <span class="fa-stack fa-4x">
+          </div>
+          <div class="row flex-nowrap">
+            <div class="col-5" align="right">
+              <span class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-money-bill-alt fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-sm-7">
+            <div class="col-7">
               <h4 class="icon"><b>990 CHF</b></h4>
             </div>
-            <div class="col-sm-5" align="right">
-              <span class="fa-stack fa-4x">
+          </div>
+          <div class="row flex-nowrap">
+            <div class="col-5" align="right">
+              <span class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-hand-holding-heart fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-sm-7">
+            <div class="col-7">
               <h4 class="icon"><b>1-zu-1 Betreuung</b><br>durch erfahrene Dozenten</h4>
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-md-6">
           <div class="row">
-            <div class="col-sm-5" align="right">
-              <span class="fa-stack fa-4x">
+            <div class="col-5" align="right">
+              <span class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-calendar-alt fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-sm-7">
+            <div class="col-7">
               <h4 class="icon"><b>2-Tage</b><br>von 9 bis 18Uhr</h4>
             </div>
-            <div class="col-sm-5" align="right">
-              <span class="fa-stack fa-4x">
+          </div>
+          <div class="row flex-nowrap">
+            <div class="col-5" align="right">
+              <span class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-headset fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-sm-7">
+            <div class="col-7">
               <h4 class="icon"><b>Webinar</b><br>Online-Kurs über Zoom</h4>
             </div>
-            <div class="col-sm-5" align="right">
-              <span class="fa-stack fa-4x">
+          </div>
+          <div class="row flex-nowrap">
+            <div class="col-5" align="right">
+              <span class="fa-stack fa-2x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-registered fa-stack-1x fa-inverse"></i>
               </span>
             </div>
-            <div class="col-sm-7">
+            <div class="col-7">
               <h4 class="icon"><b>R Grundlagen</b><br>vorausgesetzt.<br><a data-toggle="modal" href="#experience">&rarr;Details</a></h4>
             </div>
           </div>
