--- a/ml.html
+++ b/ml.html
@@ -67,9 +67,8 @@
     font-weight:100;
     padding-bottom: 10px;
     overflow-wrap: normal;
+    padding-left:8px;
   }
-
-  .bullet img {}
 
   .unibas-tag, .webinar-tag {
     color:white;
@@ -116,7 +115,7 @@
     .concepts li{font-size: 12px;}
     #myCarousel {height: 400px}
     .course-title {font-size:80px;padding:4% 0%}
-    .usp {font-size:24px}
+    .usp {font-size:24px;padding-left:0px}
   }
 
   @media (min-width: 992px) {
